--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@liveblocks/client": "^1.9.7",
+    "@liveblocks/core": "^1.9.7",
     "@liveblocks/react": "^1.9.7",
     "@liveblocks/react-comments": "^1.9.7",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
